--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="post/first" rel="noopener" title="Whoami">
+            <a class="button" href="post/whoami" rel="noopener" title="Whoami">
                 <span class="button-inner">
                     Whoami
                 </span>
