add new post: ffmpeg-sr.md

--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://github.com/abwildan/abwildan.github.io/tsukasa.png" alt="profile image" title=""
+        <img draggable="false" src="https://github.com/Home/tsukasa.png" alt="profile image" title=""
             height="120" width="120" />
         <h1>Hello World!</h1>
         <span>Linux Ricer, Cyber Security Enthusiast, Data Analyst, AI Admirer</span><div class="social-icons">
