--- a/public/index.html
+++ b/public/index.html
@@ -169,9 +169,9 @@
 <footer class="footer">
     <span>&copy; 2024 <a href="//localhost:1313/">Wildan&#39;s Workspace</a></span>
     <span>
-        #Powered by
-        #<a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        #<a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+        Powered by
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
     </span>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
