fixing to draft-ing kayal.md & un-draft-ing /chess/intro.md

--- a/public/tech/conky/index.html
+++ b/public/tech/conky/index.html
@@ -797,11 +797,7 @@ Berikut spek dan tangkapan layarnya:<br>
 
 <nav class="pagenav">
   
-    <a class="prev" href="/tech/kayal/">
-      <span class="direction">« Prev</span>
-      <br>
-      <span> Trying Out A Flavor of New Hugo Theme: Kayal </span>
-    </a>
+  <div></div>
   
   
     <a class="next" href="/tech/tty/">
