--- a/public/chess/intro/index.html
+++ b/public/chess/intro/index.html
@@ -1357,6 +1357,12 @@ d. Petak yang akan dilewati atau ditempati Raja saat Rokade tidak sedang dikawal
 <p>Belajar teori bermain catur dari menonton video atau membaca literatur catur tidaklah salah. Namun, akan lebih baik jika kita juga langsung mencoba memainkan catur. Sebab, dengan banyak berlatih catur dengan praktik langsung, kita akan lebih mudah mengenali kekuatan dan kelemahan kita sehingga kita bisa memprioritaskan hal yang perlu di-<em>improve</em>. Sebagaimana kata pepatah, <em><strong>&ldquo;experience is the best teacher&rdquo;</strong></em>. Nah, saya punya 2 rekomendasi platform bermain dan belajar catur yang cukup bagus untuk mengasah maupun meningkatkan skill catur kita, yaitu <a href="https://www.chess.com/" target="_blank"><strong>Chesscom</strong></a>
  dan <a href="https://lichess.org/" target="_blank"><strong>Lichess</strong></a>
 .</p>
+<hr>
+<p>🐧 This article is created with <a href="https://archlinux.org/" target="_blank"><strong>&ldquo;Archlinux&rdquo;</strong></a>
+ + <a href="https://awesomewm.org/" target="_blank"><strong>&ldquo;AwesomeWM&rdquo;</strong></a>
+:<br>
+<img loading="lazy" src="/chess/intro/ss34.png" alt="ss34"  />
+</p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
