--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@ My full name is Abdullah Wildan Ulhaq, but just call me Wildan! I am a Linux Ric
 
 
 <p>Hola!</p>
-<p>My full name is Abdullah Wildan Ulhaq, but just call me Wildan! I am a <mark><strong>Linux Ricer</strong></mark>, <mark><strong>Cyber Security Enthusiast</strong></mark>, <mark><strong>Data Analyst</strong></mark>, <mark><strong>Artificial Intelligence (AI) Admirer</strong></mark>, and a <mark><strong>Chess Player</strong></mark>. This blog is the place I use basically to share my hobby, experience, thoughts, and other activities I&rsquo;d like to share. If you don&rsquo;t mind, you can give some greetings or anything in the comment section at the bottom of each article in this site.</p>
+<p>My full name is Abdullah Wildan Ulhaq, but just call me Wildan! I am a <mark><strong>Linux Ricer</strong></mark>, <mark><strong>Cyber Security Enthusiast</strong></mark>, <mark><strong>Data Analyst</strong></mark>, <mark><strong>Artificial Intelligence (AI) Admirer</strong></mark>, and a <mark><strong>Chess Player</strong></mark>. This blog is the place I use basically to share my hobby, experience, thoughts, and other activities I&rsquo;d like to share with. If you don&rsquo;t mind, you can give some greetings or anything in the comment section at the bottom of each article in this site.</p>
 <p>So, nice to meet you, and&hellip; <br>
 Happy reading! 😃</p>
 
