--- a/public/chess/intro/index.html
+++ b/public/chess/intro/index.html
@@ -356,7 +356,7 @@
       <ul>
         <li><a href="#video-youtube">Video Youtube</a></li>
         <li><a href="#buku-digital-e-book">Buku Digital (E-Book)</a></li>
-        <li><a href="#platform-bermain--belajar-catur">Platform Bermain &amp; Belajar Catur</a></li>
+        <li><a href="#platform-catur-online">Platform Catur Online</a></li>
       </ul>
     </li>
   </ul>
@@ -1249,7 +1249,7 @@ d. Petak yang akan dilewati atau ditempati Raja saat Rokade tidak sedang dikawal
 <tr>
 <td style="text-align:right">9</td>
 <td style="text-align:left">Adagmator&rsquo;s Chess Channel</td>
-<td style="text-align:left"><a href="https://www.youtube.com/@agadmator/videos" target="_blank">https://www.youtube.com/@agadmator/videos</a>
+<td style="text-align:left"><a href="https://www.youtube.com/@agadmator/" target="_blank">https://www.youtube.com/@agadmator/</a>
 </td>
 </tr>
 <tr>
@@ -1343,10 +1343,10 @@ d. Petak yang akan dilewati atau ditempati Raja saat Rokade tidak sedang dikawal
 </tbody>
 </table>
 
-<h3 id="platform-bermain--belajar-catur">
-  Platform Bermain &amp; Belajar Catur
+<h3 id="platform-catur-online">
+  Platform Catur Online
   
-  <a hidden class="anchor" href="#platform-bermain--belajar-catur">
+  <a hidden class="anchor" href="#platform-catur-online">
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M172.5 131.1C228.1 75.51 320.5 75.51 376.1 131.1C426.1 181.1 433.5 260.8 392.4 318.3L391.3 319.9C381 334.2 361 337.6 346.7 327.3C332.3 317 328.9 297 339.2 282.7L340.3 281.1C363.2 249 359.6 205.1 331.7 177.2C300.3 145.8 249.2 145.8 217.7 177.2L105.5 289.5C73.99 320.1 73.99 372 105.5 403.5C133.3 431.4 177.3 435 209.3 412.1L210.9 410.1C225.3 400.7 245.3 404 255.5 418.4C265.8 432.8 262.5 452.8 248.1 463.1L246.5 464.2C188.1 505.3 110.2 498.7 60.21 448.8C3.741 392.3 3.741 300.7 60.21 244.3L172.5 131.1zM467.5 380C411 436.5 319.5 436.5 263 380C213 330 206.5 251.2 247.6 193.7L248.7 192.1C258.1 177.8 278.1 174.4 293.3 184.7C307.7 194.1 311.1 214.1 300.8 229.3L299.7 230.9C276.8 262.1 280.4 306.9 308.3 334.8C339.7 366.2 390.8 366.2 422.3 334.8L534.5 222.5C566 191 566 139.1 534.5 108.5C506.7 80.63 462.7 76.99 430.7 99.9L429.1 101C414.7 111.3 394.7 107.1 384.5 93.58C374.2 79.2 377.5 59.21 391.9 48.94L393.5 47.82C451 6.731 529.8 13.25 579.8 63.24C636.3 119.7 636.3 211.3 579.8 267.7L467.5 380z"/></svg>
 
@@ -1356,7 +1356,42 @@ d. Petak yang akan dilewati atau ditempati Raja saat Rokade tidak sedang dikawal
 </h3>
 <p>Belajar teori bermain catur dari menonton video atau membaca literatur catur tidaklah salah. Namun, akan lebih baik jika kita juga langsung mencoba memainkan catur. Sebab, dengan banyak berlatih catur dengan praktik langsung, kita akan lebih mudah mengenali kekuatan dan kelemahan kita sehingga kita bisa memprioritaskan hal yang perlu di-<em>improve</em>. Sebagaimana kata pepatah, <em><strong>&ldquo;experience is the best teacher&rdquo;</strong></em>. Nah, saya punya 2 rekomendasi platform bermain dan belajar catur yang cukup bagus untuk mengasah maupun meningkatkan skill catur kita, yaitu <a href="https://www.chess.com/" target="_blank"><strong>Chesscom</strong></a>
  dan <a href="https://lichess.org/" target="_blank"><strong>Lichess</strong></a>
-.</p>
+. Di kedua platform catur online tersebut, kalian bisa mengasah skill catur dengan menyelesaikan <em>puzzle</em> setiap hari.</p>
+<table>
+<thead>
+<tr>
+<th>No</th>
+<th style="text-align:left">Platform</th>
+<th style="text-align:center">Overview</th>
+<th style="text-align:left">Kelebihan</th>
+<th style="text-align:left">Kekurangan</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1.</td>
+<td style="text-align:left"><a href="https://www.chess.com/puzzles/rated" target="_blank">Chesscom</a>
+</td>
+<td style="text-align:center"><img loading="lazy" src="/chess/intro/ss36.png" alt="ss36"  />
+</td>
+<td style="text-align:left">Punya banyak fitur belajar catur</td>
+<td style="text-align:left">Berbayar</td>
+</tr>
+<tr>
+<td>2.</td>
+<td style="text-align:left"><a href="https://lichess.org/training/daily" target="_blank">Lichess</a>
+</td>
+<td style="text-align:center"><img loading="lazy" src="/chess/intro/ss35.png" alt="ss35"  />
+</td>
+<td style="text-align:left">Gratis</td>
+<td style="text-align:left">Fiturnya tidak sekaya Chesscom</td>
+</tr>
+</tbody>
+</table>
+<p>Okeeyy, sekian dulu pengelanan <del>(singkat)</del> tentang catur.<br>
+Semoga bisa dipahami ya!<br>
+Selamat belajar catur, dan &hellip;<br>
+Salam <strong>Gens Una Sumus</strong>!!</p>
 <hr>
 <p>🐧 This article is created with <a href="https://archlinux.org/" target="_blank"><strong>&ldquo;Archlinux&rdquo;</strong></a>
  + <a href="https://awesomewm.org/" target="_blank"><strong>&ldquo;AwesomeWM&rdquo;</strong></a>
