modify 3 /chess/intro.md

--- a/public/chess/intro/index.html
+++ b/public/chess/intro/index.html
@@ -291,7 +291,7 @@
 
 </span>
   
-    16 mins
+    17 mins
   
 
 
@@ -1321,9 +1321,9 @@ d. Petak yang akan dilewati atau ditempati Raja saat Rokade tidak sedang dikawal
 </tr>
 <tr>
 <td style="text-align:right">6</td>
-<td style="text-align:left">How to Choose a Chess Move</td>
-<td style="text-align:left">Andrew Soltis</td>
-<td style="text-align:center"><a href="https://drive.google.com/file/d/1uVRphFiofa6fOR7k3Fo7vRqNcs70O6Y2/view?usp=sharing" target="_blank">pdf</a>
+<td style="text-align:left">Chess for Beginners</td>
+<td style="text-align:left">Drew Sleep &amp; Adam Markiewicz</td>
+<td style="text-align:center"><a href="https://drive.google.com/file/d/15HZSQg-oqiHSawZBAD7lbvX4ZK6bB0lT/view?usp=sharing" target="_blank">pdf</a>
 </td>
 </tr>
 <tr>
@@ -1342,6 +1342,9 @@ d. Petak yang akan dilewati atau ditempati Raja saat Rokade tidak sedang dikawal
 </tr>
 </tbody>
 </table>
+<p>Kalau saya boleh pilihkan 1 buku yang paling mesti dibaca bagi pemula catur, saya akan rekomendasikan <mark><strong>&quot;<em>Chess for Beginners</em> oleh Drew Sleep &amp; Adam Markiewicz&quot;</strong></mark>. Buku tersebut selain adalah buku yang relatif baru (karena dicetak tahun 2023), juga menyajikan ilustrasi yang menarik dan memanjakan mata. Benar-benar diciptakan khusus untuk menarik minat para pemula catur. Meskipun demikian, buku tersebut juga membahas semua jenis informasi catur yang komprehensif. Sebagai gambaran, berikut ini tangkapan layar bukunya:
+<img loading="lazy" src="/chess/intro/ss37.png" alt="ss37"  />
+</p>
 
 <h3 id="platform-catur-online">
   Platform Catur Online
