--- a/public/chess/intro/index.html
+++ b/public/chess/intro/index.html
@@ -1346,7 +1346,7 @@ d. Petak yang akan dilewati atau ditempati Raja saat Rokade tidak sedang dikawal
 </tr>
 </tbody>
 </table>
-<p>Kalau saya boleh pilihkan 1 buku yang paling mesti dibaca bagi pemula catur, saya akan rekomendasikan <mark><strong>&quot;<em>Chess for Beginners</em> oleh Drew Sleep &amp; Adam Markiewicz&quot;</strong></mark>. Buku tersebut selain adalah buku yang relatif baru (karena dicetak tahun 2023), juga menyajikan ilustrasi yang menarik dan memanjakan mata. Benar-benar diciptakan khusus untuk menarik minat para pemula catur. Meskipun demikian, buku tersebut juga membahas semua jenis informasi catur yang komprehensif. Sebagai gambaran, berikut ini tangkapan layar bukunya:
+<p>Kalau saya boleh pilihkan 1 buku yang paling mesti dibaca bagi pemula catur, saya akan rekomendasikan <mark><strong>&quot;<em>Chess for Beginners</em> oleh Drew Sleep &amp; Adam Markiewicz&quot;</strong></mark>. Buku 130 halaman tersebut selain adalah buku yang relatif baru (karena dicetak tahun 2023), juga menyajikan ilustrasi yang menarik dan memanjakan mata. Benar-benar diciptakan khusus untuk menarik minat para pemula catur. Meskipun demikian, buku tersebut juga membahas semua jenis informasi catur yang komprehensif. Sebagai gambaran, berikut ini tangkapan layar bukunya:
 <img loading="lazy" src="/chess/intro/ss37.png" alt="ss37"  />
 </p>
 
@@ -1402,6 +1402,7 @@ Salam <strong>Gens Una Sumus</strong>!!</p>
 <hr>
 <p>🐧 This article is created with <a href="https://archlinux.org/" target="_blank"><strong>&ldquo;Archlinux&rdquo;</strong></a>
  + <a href="https://awesomewm.org/" target="_blank"><strong>&ldquo;AwesomeWM&rdquo;</strong></a>
+ + <a href="https://github.com/Manas140/dotfiles" target="_blank"><strong>&ldquo;Manas dotfile&rdquo;</strong></a>
 :<br>
 <img loading="lazy" src="/chess/intro/ss34.png" alt="ss34"  />
 </p>
