modify chesscom.html, intro.md, hugo-advanced.md, _index.md, & add new post chess/pop-tactics.md

--- a/public/chess/intro/index.html
+++ b/public/chess/intro/index.html
@@ -373,7 +373,7 @@
 
 
 <p>Hola!</p>
-<p>Saya akan berbagi tentang catur di artikel ini. Sudah pada tau catur, kan? Iya, catur adalah permainan yang dimainkan oleh dua orang pada sebuah papan 64 petak yang berwarna gelap dan terang berukuran 8x8, dimana setiap pemain memiliki seperangkat buah catur (satu set buah catur) berjumlah 16 yang terdiri dari:<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>
+<p>Saya akan berbagi tentang catur di artikel ini. Sudah pada tau catur, kan? Iya, catur adalah permainan yang dimainkan oleh dua orang pada sebuah papan 64 petak yang berwarna gelap dan terang berukuran 8x8, dimana setiap pemain memiliki seperangkat buah catur (satu set buah catur) berjumlah 16 yang terdiri dari Raja, Menteri/Ratu, Gajah/Seluncur/Peluncur, Kuda, Benteng, dan Pion. Berikut adalah buah-buah catur beserta susunannya dalam papan catur:<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>
 <img loading="lazy" src="/chess/intro/ss2.jpg" alt="ss2"  title="papan catur dan susunan buah catur"  />
 </p>
 <p>Catur menurut saya pribadi adalah salah satu permainan sekaligus olahraga (otak) yang dapat melatih cara berfikir strategis. Bahkan, sependek pengetahuan saya, catur sudah dimainkan sejak zaman dulu oleh raja-raja. Artinya, catur pada zaman itu adalah permainan &ldquo;kelas atas&rdquo; yang sekarang sudah bisa dinikmati oleh semua kelas atau kalangan. Meskipun demikian, sebagaimana hakikatnya yang saat ini diberi predikat &ldquo;permainan&rdquo;, catur juga punya sisi negatifnya.</p>
@@ -869,10 +869,8 @@ Papan catur sendiri merupakan papan berukuran 8x8 sehingga satu papan catur memi
 <p>Notasi tersebut ditulis dan disusun berdasarkan langkah-langkah yang dibuat oleh masing-masing pemain. Artinya, pada langkah pertama, akan ada dua notasi, yaitu notasi langkah dari pemain putih dan notasi langkah dari pemain hitam. Dengan demikian, yang dimaksud dengan &ldquo;langkah pertama&rdquo; adalah gabungan langkah pertama dari kedua pemain (pemain putih dan pemain hitam). Begitupula seterusnya hingga langkah terakhir. Misalnya, permainan baru dimulai dan pemain putih menjalankan <strong>Kuda (N)</strong> dari <strong>g1</strong> ke <strong>f3</strong>, kemudian pemain hitam membalas dengan menjalankan pion dari petak <strong>b7</strong> ke <strong>b6</strong>, maka notasi yang akan ditulis yaitu <strong>1. Nf3 b6</strong>. Inilah langkah pertama. Jika pemain meneruskan permainan, misalnya pemain putih menjalankan pion <strong>e2</strong> ke <strong>e3</strong> dan pemain hitam mengeluarkan gajah di <strong>c8</strong> ke <strong>b7</strong>, maka notasinya adalah <strong>1. Nf3 b6 2. e3 Bb7</strong>.</p>
 <p>Supaya lebih mudah memahami notasi catur, perhatikan 9 langkah catur pada permainan berikut!</p>
 <div style="text-align: center;">
-  <iframe id="12053291" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=12053291"></iframe><script>window.addEventListener("message",e=>{e['data']&&"12053291"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
+  <iframe id="12072909" allowtransparency="true" frameborder="0" scrolling="false" style="width:100%;height:460px;border:none;" src="//www.chess.com/emboard?id=12072909"></iframe><script>window.addEventListener("message",e=>{e['data']&&"12072909"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
 </div>
-
-
 
 <h2 id="nilai-buah-catur">
   Nilai Buah Catur
@@ -1447,6 +1445,25 @@ Salam <strong>Gens Una Sumus</strong>!!</p>
 
 
 
+
+
+
+
+
+
+
+<nav class="pagenav">
+  
+    <a class="prev" href="/chess/pop-tactics/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Chess Tactics: Fork, Pin, and Skewer </span>
+    </a>
+  
+  
+  <div></div>
+  
+</nav>
 
 
 
