add new post sqlbasic.md

--- a/public/tech/kayal/index.html
+++ b/public/tech/kayal/index.html
@@ -1124,7 +1124,11 @@ See ya! 😎</p>
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/sqlbasic/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> SQL Basic Commands </span>
+    </a>
   
   
     <a class="next" href="/tech/conky/">
