modify recordmydesktop.md & sqlbasic.md

--- a/public/tech/kayal/index.html
+++ b/public/tech/kayal/index.html
@@ -1127,7 +1127,7 @@ See ya! 😎</p>
     <a class="prev" href="/tech/sqlbasic/">
       <span class="direction">« Prev</span>
       <br>
-      <span> SQL Basic Commands </span>
+      <span> SQL Basics - Installation to Basic Commands </span>
     </a>
   
   
