--- a/public/tech/lazyvim/index.html
+++ b/public/tech/lazyvim/index.html
@@ -8,8 +8,8 @@
 
   
   
-  <title>Lazyvim: A neovim script setup for the lazy-er(s) &middot; Wildan&#39;s Workspace</title>
-  <meta name="title" content="Lazyvim: A neovim script setup for the lazy-er(s) &middot; Wildan&#39;s Workspace" />
+  <title>Lazyvim: A neovim setup for the lazy-er(s) &middot; Wildan&#39;s Workspace</title>
+  <meta name="title" content="Lazyvim: A neovim setup for the lazy-er(s) &middot; Wildan&#39;s Workspace" />
   
 
   
@@ -67,7 +67,7 @@
 
   <meta property="og:url" content="http://localhost:1313/tech/lazyvim/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
-  <meta property="og:title" content="Lazyvim: A neovim script setup for the lazy-er(s)">
+  <meta property="og:title" content="Lazyvim: A neovim setup for the lazy-er(s)">
   <meta property="og:description" content="This is just my personal documentation of installing and using lazyvim as a blogger.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
@@ -80,7 +80,7 @@
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Lazyvim: A neovim script setup for the lazy-er(s)">
+  <meta name="twitter:title" content="Lazyvim: A neovim setup for the lazy-er(s)">
   <meta name="twitter:description" content="This is just my personal documentation of installing and using lazyvim as a blogger.">
 
 
@@ -253,7 +253,7 @@
 
 
 
-<h1 class="pg-title">Lazyvim: A neovim script setup for the lazy-er(s)</h1>
+<h1 class="pg-title">Lazyvim: A neovim setup for the lazy-er(s)</h1>
 
 
 <div class="meta">
@@ -596,7 +596,7 @@ Proses instalasi ini merujuk pada pentunjuk resmi lazyvim di repo github-nya: <a
     <a class="next" href="/tech/sqlbasic/">
       <span class="direction">Next »</span>
       <br>
-      <span> SQL Basic Commands </span>
+      <span> SQL Basics - Installation to Basic Commands </span>
     </a>
   
 </nav>
