add new post /tech/chafa.md

--- a/public/tech/lazyvim/index.html
+++ b/public/tech/lazyvim/index.html
@@ -590,7 +590,11 @@ Proses instalasi ini merujuk pada pentunjuk resmi lazyvim di repo github-nya: <a
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/chafa/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Chafa: Character Art Facsimile Generator </span>
+    </a>
   
   
     <a class="next" href="/tech/sqlbasic/">
