--- a/public/tech/chafa/index.html
+++ b/public/tech/chafa/index.html
@@ -371,8 +371,11 @@
 </span></span></code></pre></div><p>Boom!</p>
 <p><img loading="lazy" src="/chafa/ss1.png" alt="ss1"  />
 </p>
+<p>GIF-nya jangan lupa!!</p>
+<p><img loading="lazy" src="/chafa/gif1.gif" alt="gif1"  />
+</p>
 <p>Keren banget, bukan?</p>
-<p>Tapi memang, kalau dilihat di official repo github-nya, program <strong>chafa</strong> ini memang relatif baru rilis, sekitar 2 tahun lalu. Jadi, saat itu saya memang belum menjumpai chafa karena program ini (mungkin) belum lahir.</p>
+<p>Tapi, kalau dilihat di <em>official</em> repo github-nya, program <strong>chafa</strong> ini memang relatif baru rilis, sekitar 2 tahun lalu. Jadi, saat itu (ketika saya mencari-cari program seperti chafa) saya mungkin saja belum menjumpai chafa karena program ini (mungkin) belum lahir.</p>
 <p>Wkwkwk~</p>
 
 
