add new content tech/kittyconfig.md

--- a/public/tech/chafa/index.html
+++ b/public/tech/chafa/index.html
@@ -390,7 +390,11 @@
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/kittyconfig/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Configuring Kitty & Bash </span>
+    </a>
   
   
     <a class="next" href="/tech/lazyvim/">
