new conten tech/ircserver.md

--- a/public/tech/kittyconfig/index.html
+++ b/public/tech/kittyconfig/index.html
@@ -727,7 +727,11 @@ Kode warna lainnya dapat dijumpai di website berikut: <a href="https://www.ditig
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/ircserver/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Create Your Own IRC Server with Inspircd & Ircd-hybrid! </span>
+    </a>
   
   
     <a class="next" href="/tech/chafa/">
