add new content tech/ircserver.md

--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@ Happy reading! 😃</p>
   
   
   <section class="list-item">
-    <h2 class="ft-title"><a href="/tech/ircserver/">Create Your Own IRC Server with Inspircd & Ircd-hybrid!</a></h2>
+    <h2 class="ft-title"><a href="/tech/ircserver/">Create Your Own IRC Server!</a></h2>
     <div class="meta">
       
 
@@ -312,7 +312,7 @@ Happy reading! 😃</p>
 
     </div>
     <div class="description">
-  Do you want to chat via terminal like a hackerman? If so, it&rsquo;s time to read this, then&hellip;
+  Do you want to chat via terminal like a hackerman? If so, it&rsquo;s time to read this because we will create an IRC Server with inspircd &amp; ircd-hybrid.
 </div>
 
     
