--- a/public/tech/ircserver/index.html
+++ b/public/tech/ircserver/index.html
@@ -8,13 +8,13 @@
 
   
   
-  <title>Create Your Own IRC Server with Inspircd & Ircd-hybrid! &middot; Wildan&#39;s Workspace</title>
-  <meta name="title" content="Create Your Own IRC Server with Inspircd & Ircd-hybrid! &middot; Wildan&#39;s Workspace" />
+  <title>Create Your Own IRC Server! &middot; Wildan&#39;s Workspace</title>
+  <meta name="title" content="Create Your Own IRC Server! &middot; Wildan&#39;s Workspace" />
   
 
   
   
-  <meta name="description" content="Do you want to chat via terminal like a hackerman? If so, it&#39;s time to read this, then..." />
+  <meta name="description" content="Do you want to chat via terminal like a hackerman? If so, it&#39;s time to read this because we will create an IRC Server with inspircd &amp; ircd-hybrid." />
   
   <meta name="keywords" content="irc, server, " />
   <link rel="canonical" href="http://localhost:1313/tech/ircserver/" />
@@ -67,8 +67,8 @@
 
   <meta property="og:url" content="http://localhost:1313/tech/ircserver/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
-  <meta property="og:title" content="Create Your Own IRC Server with Inspircd & Ircd-hybrid!">
-  <meta property="og:description" content="Do you want to chat via terminal like a hackerman? If so, it’s time to read this, then…">
+  <meta property="og:title" content="Create Your Own IRC Server!">
+  <meta property="og:description" content="Do you want to chat via terminal like a hackerman? If so, it’s time to read this because we will create an IRC Server with inspircd &amp; ircd-hybrid.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -79,8 +79,8 @@
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Create Your Own IRC Server with Inspircd & Ircd-hybrid!">
-  <meta name="twitter:description" content="Do you want to chat via terminal like a hackerman? If so, it’s time to read this, then…">
+  <meta name="twitter:title" content="Create Your Own IRC Server!">
+  <meta name="twitter:description" content="Do you want to chat via terminal like a hackerman? If so, it’s time to read this because we will create an IRC Server with inspircd &amp; ircd-hybrid.">
 
 
   
@@ -252,7 +252,7 @@
 
 
 
-<h1 class="pg-title">Create Your Own IRC Server with Inspircd & Ircd-hybrid!</h1>
+<h1 class="pg-title">Create Your Own IRC Server!</h1>
 
 
 <div class="meta">
