--- a/public/tech/kittyconfig/index.html
+++ b/public/tech/kittyconfig/index.html
@@ -730,7 +730,7 @@ Kode warna lainnya dapat dijumpai di website berikut: <a href="https://www.ditig
     <a class="prev" href="/tech/ircserver/">
       <span class="direction">« Prev</span>
       <br>
-      <span> Create Your Own IRC Server with Inspircd & Ircd-hybrid! </span>
+      <span> Create Your Own IRC Server! </span>
     </a>
   
   
