add new content tech/openvpn-server.md

--- a/public/tech/ircserver/index.html
+++ b/public/tech/ircserver/index.html
@@ -685,7 +685,11 @@ Perlu dicatat beberapa hal berikut:</p>
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/openvpn-server/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Building VPN Server using Openvpn </span>
+    </a>
   
   
     <a class="next" href="/tech/kittyconfig/">
