add new content: netcat.md

--- a/public/tech/ircserver/index.html
+++ b/public/tech/ircserver/index.html
@@ -688,7 +688,7 @@ Perlu dicatat beberapa hal berikut:</p>
     <a class="prev" href="/tech/openvpn-server/">
       <span class="direction">« Prev</span>
       <br>
-      <span> Building VPN Server using Openvpn </span>
+      <span> Building VPN Server using OpenVPN </span>
     </a>
   
   
