--- a/public/tech/openvpn-server/index.html
+++ b/public/tech/openvpn-server/index.html
@@ -460,7 +460,11 @@ Select an option [1-2]: 1</li>
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/netcat/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Netcat: The Simplest Way to Transfer File </span>
+    </a>
   
   
     <a class="next" href="/tech/ircserver/">
