--- a/public/tech/rofi/index.html
+++ b/public/tech/rofi/index.html
@@ -67,7 +67,7 @@
 
   <meta property="og:url" content="http://localhost:1313/tech/rofi/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
-  <meta property="og:title" content="Rofi - Beautiful & Modern App Launcher">
+  <meta property="og:title" content="Rofi - Beautiful &amp; Modern App Launcher">
   <meta property="og:description" content="What is Rofi?
 Kenalan dengan Rofi Teman kalian mungkin ada yang namanya Rofi. Tapi, tentu saja artikel ini tidak sedang menggosipkan Rofi sebagai manusia, tapi Rofi sebagai sebuah program, xixi.">
   <meta property="og:locale" content="en_us">
@@ -80,7 +80,7 @@ Kenalan dengan Rofi Teman kalian mungkin ada yang namanya Rofi. Tapi, tentu saja
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Rofi - Beautiful & Modern App Launcher">
+  <meta name="twitter:title" content="Rofi - Beautiful &amp; Modern App Launcher">
   <meta name="twitter:description" content="What is Rofi?
 Kenalan dengan Rofi Teman kalian mungkin ada yang namanya Rofi. Tapi, tentu saja artikel ini tidak sedang menggosipkan Rofi sebagai manusia, tapi Rofi sebagai sebuah program, xixi.">
 
