--- a/public/tech/kittyconfig/index.html
+++ b/public/tech/kittyconfig/index.html
@@ -67,7 +67,7 @@
 
   <meta property="og:url" content="http://localhost:1313/tech/kittyconfig/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
-  <meta property="og:title" content="Configuring Kitty &amp; Bash">
+  <meta property="og:title" content="Configuring Kitty & Bash">
   <meta property="og:description" content="How to configure kitty &amp; its shell (I use bash, btw) so it’ll look charming…">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
@@ -80,7 +80,7 @@
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Configuring Kitty &amp; Bash">
+  <meta name="twitter:title" content="Configuring Kitty & Bash">
   <meta name="twitter:description" content="How to configure kitty &amp; its shell (I use bash, btw) so it’ll look charming…">
 
 
