modify rsync.md & Hugo-Advanced.md

--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@ Happy reading! 😃</p>
   
   
   <section class="list-item">
-    <h2 class="ft-title"><a href="/tech/rsync/">Rsync: The Best Tool for Backing Up Data</a></h2>
+    <h2 class="ft-title"><a href="/tech/rsync/">rsync: The Best Tool for Backing Up Data</a></h2>
     <div class="meta">
       
 
