--- a/public/tech/netcat/index.html
+++ b/public/tech/netcat/index.html
@@ -465,7 +465,7 @@
     <a class="prev" href="/tech/rsync/">
       <span class="direction">« Prev</span>
       <br>
-      <span> Rsync: Best Tools for Backing Up Data </span>
+      <span> Rsync: The Best Tool for Backing Up Data </span>
     </a>
   
   
