modify tech/rsync.md & tech/netcat.md

--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@ Happy reading! 😃</p>
   </section>
   
   <section class="list-item">
-    <h2 class="ft-title"><a href="/tech/netcat/">Netcat: The Simplest Way to Transfer File</a></h2>
+    <h2 class="ft-title"><a href="/tech/netcat/">netcat: The Simplest Way to Transfer File</a></h2>
     <div class="meta">
       
 
