--- a/public/tech/netcat/index.html
+++ b/public/tech/netcat/index.html
@@ -8,8 +8,8 @@
 
   
   
-  <title>Netcat: The Simplest Way to Transfer File &middot; Wildan&#39;s Workspace</title>
-  <meta name="title" content="Netcat: The Simplest Way to Transfer File &middot; Wildan&#39;s Workspace" />
+  <title>netcat: The Simplest Way to Transfer File &middot; Wildan&#39;s Workspace</title>
+  <meta name="title" content="netcat: The Simplest Way to Transfer File &middot; Wildan&#39;s Workspace" />
   
 
   
@@ -67,7 +67,7 @@
 
   <meta property="og:url" content="http://localhost:1313/tech/netcat/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
-  <meta property="og:title" content="Netcat: The Simplest Way to Transfer File">
+  <meta property="og:title" content="netcat: The Simplest Way to Transfer File">
   <meta property="og:description" content="Learn the best way to transfer file(s) through a network.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
@@ -80,7 +80,7 @@
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Netcat: The Simplest Way to Transfer File">
+  <meta name="twitter:title" content="netcat: The Simplest Way to Transfer File">
   <meta name="twitter:description" content="Learn the best way to transfer file(s) through a network.">
 
 
@@ -253,7 +253,7 @@
 
 
 
-<h1 class="pg-title">Netcat: The Simplest Way to Transfer File</h1>
+<h1 class="pg-title">netcat: The Simplest Way to Transfer File</h1>
 
 
 <div class="meta">
@@ -465,7 +465,7 @@
     <a class="prev" href="/tech/rsync/">
       <span class="direction">« Prev</span>
       <br>
-      <span> Rsync: The Best Tool for Backing Up Data </span>
+      <span> rsync: The Best Tool for Backing Up Data </span>
     </a>
   
   
