--- a/public/tech/rsync/index.html
+++ b/public/tech/rsync/index.html
@@ -515,7 +515,7 @@ Kalau masih bingung atau mau <em>explore</em> lebih jauh tentang <strong><code>r
     <a class="next" href="/tech/netcat/">
       <span class="direction">Next »</span>
       <br>
-      <span> Netcat: The Simplest Way to Transfer File </span>
+      <span> netcat: The Simplest Way to Transfer File </span>
     </a>
   
 </nav>
