modify 3 tech/rsyn.md

--- a/public/tech/rsync/index.html
+++ b/public/tech/rsync/index.html
@@ -489,7 +489,7 @@ Ketika akan melakukan <em>backup</em> ke atau dari server, kita akan diminta unt
 </blockquote>
 <p>Gimana? Mudah bukan?<br>
 Kalau masih bingung atau mau <em>explore</em> lebih jauh tentang <strong><code>rsync</code></strong>, jangan sungkan-sungkan untuk baca-baca <em>manual page</em>-nya dengan perintah <strong><code>man rsync</code></strong> atau berselancar dan bertanya ke mbah Google atau mas ChatGPT ya. Berikut saya coba lampirkan <em>cheatsheet</em> <strong>rsync</strong> yang barangkali bisa sedikit membantu :)</p>
-<p>rsync <em>cheatsheet</em>: <mark> <a href="https://devhints.io/rsync" target="_blank">https://devhints.io/rsync</a>
+<p><strong>rsync</strong> <em>cheatsheet</em>: <mark> <a href="https://devhints.io/rsync" target="_blank">https://devhints.io/rsync</a>
  </mark></p>
 <hr>
 <p>Artikel ini ditulis menggunakan sistem operasi Debian dengan Tema: <a href="https://www.youtube.com/watch?v=N6o-coKG67Y" target="_blank">52 Hz</a>
