--- a/public/tech/openvpn-server/index.html
+++ b/public/tech/openvpn-server/index.html
@@ -463,7 +463,7 @@ Select an option [1-2]: 1</li>
     <a class="prev" href="/tech/netcat/">
       <span class="direction">« Prev</span>
       <br>
-      <span> Netcat: The Simplest Way to Transfer File </span>
+      <span> netcat: The Simplest Way to Transfer File </span>
     </a>
   
   
