modify tech/Hugo-Advanced.md & add new content tech/convertvideoformat.md

--- a/public/tech/netcat/index.html
+++ b/public/tech/netcat/index.html
@@ -465,7 +465,7 @@
     <a class="prev" href="/tech/rsync/">
       <span class="direction">« Prev</span>
       <br>
-      <span> rsync: The Best Tool for Backing Up Data </span>
+      <span> rsync: The Powerful Tool for Backing Up Data </span>
     </a>
   
   
