add new content tech/sshnopass.md & modify rsync.md Hugo-Advanced.md

--- a/public/tech/covertvideoformat/index.html
+++ b/public/tech/covertvideoformat/index.html
@@ -14,7 +14,7 @@
 
   
   
-  <meta name="description" content="If you have ffmpeg installed on your Linux machine, then it can help you convert any video format to MP4!" />
+  <meta name="description" content="If you have ffmpeg installed on your Linux machine, then it actually could help you to convert any video format to MP4!" />
   
   <meta name="keywords" content="ffmpeg, tutorial, video format, " />
   <link rel="canonical" href="http://localhost:1313/tech/covertvideoformat/" />
@@ -68,7 +68,7 @@
   <meta property="og:url" content="http://localhost:1313/tech/covertvideoformat/">
   <meta property="og:site_name" content="Wildan&#39;s Workspace">
   <meta property="og:title" content="FFmpeg - Convert Any Video Format to MP4">
-  <meta property="og:description" content="If you have ffmpeg installed on your Linux machine, then it can help you convert any video format to MP4!">
+  <meta property="og:description" content="If you have ffmpeg installed on your Linux machine, then it actually could help you to convert any video format to MP4!">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
     <meta property="article:section" content="tech">
@@ -81,7 +81,7 @@
   
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="FFmpeg - Convert Any Video Format to MP4">
-  <meta name="twitter:description" content="If you have ffmpeg installed on your Linux machine, then it can help you convert any video format to MP4!">
+  <meta name="twitter:description" content="If you have ffmpeg installed on your Linux machine, then it actually could help you to convert any video format to MP4!">
 
 
   
@@ -357,13 +357,17 @@
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/sshnopass/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> SSH without Password? </span>
+    </a>
   
   
     <a class="next" href="/tech/rsync/">
       <span class="direction">Next »</span>
       <br>
-      <span> rsync: The Powerful Tool for Backing Up Data </span>
+      <span> rsync: A Powerful Tool for Backing Up Data </span>
     </a>
   
 </nav>
