add new content tech/dvwa-docker.md

--- a/public/tech/sshnopass/index.html
+++ b/public/tech/sshnopass/index.html
@@ -416,7 +416,11 @@
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/dvwa-docker/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Step by Step to Install DVWA via Docker </span>
+    </a>
   
   
     <a class="next" href="/tech/covertvideoformat/">
