--- a/public/index.html
+++ b/public/index.html
@@ -269,7 +269,7 @@ Happy reading! 😃</p>
   
   
   <section class="list-item">
-    <h2 class="ft-title"><a href="/tech/dvwa-docker/">Step by Step DVWA Installation via Docker</a></h2>
+    <h2 class="ft-title"><a href="/tech/dvwa-docker/">Step by Step DVWA Installation for Web App Hacking</a></h2>
     <div class="meta">
       
 
@@ -304,7 +304,7 @@ Happy reading! 😃</p>
 
 </span>
   
-    2 mins
+    4 mins
   
 
 
