--- a/public/tech/sshnopass/index.html
+++ b/public/tech/sshnopass/index.html
@@ -419,7 +419,7 @@
     <a class="prev" href="/tech/dvwa-docker/">
       <span class="direction">« Prev</span>
       <br>
-      <span> Step by Step to Install DVWA via Docker </span>
+      <span> Step by Step DVWA Installation for Web App Hacking </span>
     </a>
   
   
