add new content tech/commandinjection.md

--- a/public/tech/dvwa-docker/index.html
+++ b/public/tech/dvwa-docker/index.html
@@ -720,7 +720,11 @@ password: password</p>
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/commandinjection/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> DVWA - Command Injection </span>
+    </a>
   
   
     <a class="next" href="/tech/sshnopass/">
