add new content tech/updisk.md

--- a/public/tech/commandinjection/index.html
+++ b/public/tech/commandinjection/index.html
@@ -449,7 +449,11 @@
 
 <nav class="pagenav">
   
-  <div></div>
+    <a class="prev" href="/tech/updisk/">
+      <span class="direction">« Prev</span>
+      <br>
+      <span> Increasing Virtual Machine Disk Size in Virtualbox </span>
+    </a>
   
   
     <a class="next" href="/tech/dvwa-docker/">
